# RaylibStarter

./: .gitignore  CMakeLists.txt  README.md  web.bat
include/: hideconsole.h  random.h
include/emscripten/: version.h
include/gui/: gui.h
include/gui/components/: component.h  horizontalpanel.h  state.h  verticalpanel.h
src/: hideconsole.cpp  main.cpp  random.cpp
src/gui/components/: component.cpp  horizontalpanel.cpp  state.cpp  verticalpanel.cpp
